[gd_scene load_steps=11 format=2]

[ext_resource path="res://buttons & options/f.png" type="Texture" id=1]
[ext_resource path="res://buttons & options/Blank (2).png" type="Texture" id=2]
[ext_resource path="res://buttons & options/Blank (3).png" type="Texture" id=3]
[ext_resource path="res://background/Sky.png" type="Texture" id=4]
[ext_resource path="res://fonts/boorsok.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/game over.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=4]
size = 45
outline_size = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_color = Color( 1, 0.941176, 0.164706, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 5 )

[node name="game over" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -261.5
margin_right = 316.0
margin_bottom = 261.5
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 65.0
margin_right = 129.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.976471, 0.678431, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.976471, 0.678431, 0.0313726, 1 )
custom_fonts/font = SubResource( 4 )
text = "Game Over"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.5
margin_top = 234.0
margin_right = 132.5
margin_bottom = 340.0

[node name="Select Game" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer2"]
margin_right = 265.0
margin_bottom = 106.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Select Game"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.5
margin_top = 344.0
margin_right = 132.5
margin_bottom = 450.0

[node name="Main Menu" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer3"]
margin_right = 265.0
margin_bottom = 106.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.0
margin_top = 123.0
margin_right = 132.0
margin_bottom = 40.0

[node name="Restart" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_right = 265.0
margin_bottom = 106.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Restart"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer2/Select Game" to="." method="_on_Select_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer3/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
